--- a/frontend/src/components/login/LoginTool.module.css
+++ b/frontend/src/components/login/LoginTool.module.css
@@ -105,3 +105,9 @@
 
     color:white
 }
+
+@media (prefers-color-scheme: dark) {
+    .accesstype {
+        color: rgb(212, 212, 212);
+    }
+  }
